--- a/nieruchomości/Views/Admin/AdList.cshtml
+++ b/nieruchomości/Views/Admin/AdList.cshtml
@@ -206,7 +206,7 @@
             </div>
         </div>
         <h4>Legenda</h4>
-        <div clas="row">
+        <div class="row">
             <div class="col-md-12" style="font-size: small">
                 <span class="btn btn-success btn-xs disabled" style="opacity: 1; width:80px">
                     <span class="glyphicon glyphicon-search"></span>
