--- a/nieruchomości/Views/Admin/Messages.cshtml
+++ b/nieruchomości/Views/Admin/Messages.cshtml
@@ -33,7 +33,7 @@
                         {
 
                             <tr>
-                                <td style="vertical-align:middle">@ad.CreatedAt</td>
+                                <td style="vertical-align:middle">@ad.CreatedAt.ToShortDateString()</td>
                                 <td style="vertical-align:middle">@ad.FullName</td>
                                 <td style="vertical-align:middle">@ad.Email</td>
                                 <td style="vertical-align: middle">
@@ -63,7 +63,7 @@
             </div>
         </div>
         <h4>Legenda</h4>
-        <div clas="row">
+        <div class="row">
             <div class="col-md-12" style="font-size: small">
                 <span class="btn btn-success btn-xs disabled" style="opacity: 1; width:80px">
                     <span class="glyphicon glyphicon-search"></span>
