--- a/nieruchomości/Views/Admin/Offers.cshtml
+++ b/nieruchomości/Views/Admin/Offers.cshtml
@@ -72,5 +72,18 @@
                 <div style="text-align:center">@Html.PagedListPager(Model, page => Url.Action("Offers", new { page}))</div>
             </div>
         </div>
+        <h4>Legenda</h4>
+        <div class="row">
+            <div class="col-md-12" style="font-size:small">
+                <span class="btn btn-success btn-xs disabled" style="opacity: 1; width:80px">
+                    <span class="glyphicon glyphicon-search"></span>
+                    Podgląd
+                </span>
+                <span class="btn btn-danger btn-xs disabled" style="opacity: 1; width:80px">
+                    <span class="glyphicon glyphicon-trash"></span>
+                    Usuń
+                </span>
+            </div>
+        </div>
     </div>
 </div>
