changes in admin settings

--- a/nieruchomości/Views/Admin/AddClat.cshtml
+++ b/nieruchomości/Views/Admin/AddClat.cshtml
@@ -1,9 +1,9 @@
 ﻿@using Models.EntityModels
 
-@model Models.ViewModels.AddSettingViewModel
+@model Models.ViewModels.AddClatViewModel
 
 @{
-    ViewBag.Title = "AddSettings";
+    ViewBag.Title = "AddClat";
 }
 
 <div class="row" style="margin-right: 15px">
