--- a/nieruchomości/Views/Admin/Settings.cshtml
+++ b/nieruchomości/Views/Admin/Settings.cshtml
@@ -77,7 +77,7 @@
                         </td>
                         <td style="text-align: center">
                             <button type="submit" class="btn btn-primary btn-xs" onclick=" return confirm('Na pewno edytować?') ">Edytuj</button>
-                            @Html.ActionLink("Usuń", "DeleteSetting", new {id = x.Id}, new {@class = "btn btn-info btn-xs", @onclick = "return confirm('Na pewno usunąć?');"})
+                            @Html.ActionLink("Usuń", "DeleteClat", new {id = x.Id}, new {@class = "btn btn-info btn-xs", @onclick = "return confirm('Na pewno usunąć?');"})
                         </td>
                     </tr>
 
@@ -85,7 +85,7 @@
             }
             </tbody>
 
-            @Html.ActionLink("Dodaj nowe przedział taksy notarialnej", "AddSetting", "Admin", new { @class = "btn btn-info btn-xs" })
+            @Html.ActionLink("Dodaj nowe przedział taksy notarialnej", "AddClat", "Admin", new { @class = "btn btn-info btn-xs" })
         </table>
 
         <br>
