--- a/nieruchomości/Views/Admin/Settings.cshtml
+++ b/nieruchomości/Views/Admin/Settings.cshtml
@@ -15,113 +15,111 @@
         @Html.Partial("AdminMenu")
         <h4>Ustawienia</h4>
 
-
+        <a href="@Url.Action("AddClat", "Admin")" class="btn btn-info">Dodaj ustawienie <span class="glyphicon glyphicon-plus-sign"></span></a>
 
         <table class="table table-hover">
             <thead>
-            <tr>
-                <th>
-                    Od
-                </th>
-                <th>
-                    Do
-                </th>
-                <th>
-                    Procent
-                </th>
-                <th>
-                    Max
-                </th>
-                <th>
-                    Cena
-                </th>
-                <th></th>
-            </tr>
+                <tr>
+                    <th>
+                        Od
+                    </th>
+                    <th>
+                        Do
+                    </th>
+                    <th>
+                        Procent
+                    </th>
+                    <th>
+                        Max
+                    </th>
+                    <th>
+                        Cena
+                    </th>
+                    <th></th>
+                </tr>
             </thead>
             <tbody>
-            @foreach (var x in Model.ClatList)
-            {
-                using (Html.BeginForm("EditClat", "Admin"))
+                @foreach (var x in Model.ClatList)
                 {
-                    <tr>
-                        @Html.Hidden("Id", x.Id)
-                        <td>
-                            @Html.TextBox("From", x.From, new {style = "max-width: 100px;"})
-                        </td>
-                        <td>
-                            @if (x.To == Double.MaxValue)
-                            {
-                                @Html.TextBox("To", "Max", new {style = "max-width: 100px;"})
-                            }
-                            else
-                            {
-                                @Html.TextBox("To", x.To, new {style = "max-width: 100px;"})
-                            }
+                    using (Html.BeginForm("EditClat", "Admin"))
+                    {
+                        <tr>
+                            @Html.Hidden("Id", x.Id)
+                            <td>
+                                @Html.TextBox("From", x.From, new { style = "max-width: 100px;" })
+                            </td>
+                            <td>
+                                @if (x.To == Double.MaxValue)
+                                {
+                                    @Html.TextBox("To", "Max", new { style = "max-width: 100px;" })
+                                }
+                                else
+                                {
+                                    @Html.TextBox("To", x.To, new { style = "max-width: 100px;" })
+                                }
 
-                        </td>
-                        <td>
-                            @Html.TextBox("Percent", x.Percent, new {style = "max-width: 100px;"})
-                        </td>
-                        <td>
-                            @if (x.Max == 0)
-                            {
-                                @Html.TextBox("Max", "Brak", new {style = "max-width: 100px;"})
-                            }
-                            else
-                            {
-                                @Html.TextBox("Max", x.Max, new {style = "max-width: 100px;"})
-                            }
-                        </td>
-                        <td>
-                            @Html.TextBox("Price", x.Price, new {style = "max-width: 100px;"})
-                        </td>
-                        <td style="text-align: center">
-                            <button type="submit" class="btn btn-primary btn-xs" onclick=" return confirm('Na pewno edytować?') ">Edytuj</button>
-                            @Html.ActionLink("Usuń", "DeleteClat", new {id = x.Id}, new {@class = "btn btn-info btn-xs", @onclick = "return confirm('Na pewno usunąć?');"})
-                        </td>
-                    </tr>
+                            </td>
+                            <td>
+                                @Html.TextBox("Percent", x.Percent, new { style = "max-width: 100px;" })
+                            </td>
+                            <td>
+                                @if (x.Max == 0)
+                                {
+                                    @Html.TextBox("Max", "Brak", new { style = "max-width: 100px;" })
+                                }
+                                else
+                                {
+                                    @Html.TextBox("Max", x.Max, new { style = "max-width: 100px;" })
+                                }
+                            </td>
+                            <td>
+                                @Html.TextBox("Price", x.Price, new { style = "max-width: 100px;" })
+                            </td>
+                            <td style="text-align: center">
+                                <button type="submit" class="btn btn-default btn-xs glyphicon glyphicon-pencil" aria-hidden="true" onclick=" return confirm('Na pewno edytować?') "></button>
+                                @Html.ActionLink(" ", "DeleteClat", new { id = x.Id }, new { @class = "btn btn-danger btn-xs glyphicon glyphicon-trash", @onclick = "return confirm('Na pewno usunąć?');" })
+                            </td>
+                        </tr>
 
+                    }
                 }
-            }
             </tbody>
 
-            @Html.ActionLink("Dodaj nowe przedział taksy notarialnej", "AddClat", "Admin", new { @class = "btn btn-info btn-xs" })
         </table>
 
         <br>
         <br>
         <table class="table table-hover">
             <thead>
-            <tr>
-                <th>
-                    Nazwa
-                </th>
-                <th>
-                    Wartość
-                </th>
-            </tr>
+                <tr>
+                    <th>
+                        Nazwa
+                    </th>
+                    <th>
+                        Wartość
+                    </th>
+                </tr>
             </thead>
             <tbody>
-            @foreach (var item in Model.CostPropertiesList)
-            {
-                using (Html.BeginForm("EditCostPropList", "Admin"))
+                @foreach (var item in Model.CostPropertiesList)
                 {
-                    <tr>
-                        @Html.Hidden("Id", item.Id)
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Name)
-                        </td>
-                        <td>
-                            @Html.TextBox("Value", item.Value, new {style = "max-width: 100px;"})
-                        </td>
-                        <td style="text-align: center">
-                            <button type="submit" class="btn btn-primary btn-xs" onclick=" return confirm('Na pewno edytować?') ">Edytuj</button>
-                        </td>
-                    </tr>
+                    using (Html.BeginForm("EditCostPropList", "Admin"))
+                    {
+                        <tr>
+                            @Html.Hidden("Id", item.Id)
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Name)
+                            </td>
+                            <td>
+                                @Html.TextBox("Value", item.Value, new { style = "max-width: 100px;" })
+                            </td>
+                            <td style="text-align: center">
+                                <button type="submit" class="btn btn-default btn-xs glyphicon glyphicon-pencil" onclick=" return confirm('Na pewno edytować?') "></button>
+                            </td>
+                        </tr>
+                    }
                 }
-            }
             </tbody>
         </table>
     </div>
 </div>
-
