--- a/nieruchomości/Views/Admin/Settings.cshtml
+++ b/nieruchomości/Views/Admin/Settings.cshtml
@@ -15,7 +15,7 @@
         @Html.Partial("AdminMenu")
         <h4>Ustawienia</h4>
 
-        <a href="@Url.Action("AddClat", "Admin")" class="btn btn-info">Dodaj ustawienie <span class="glyphicon glyphicon-plus-sign"></span></a>
+        <a href="@Url.Action("AddClat", "Admin")" class="btn btn-info btn-xs"><span class="glyphicon glyphicon-plus"></span> Dodaj przedział opłaty notarialnej</a>
 
         <table class="table table-hover">
             <thead>
@@ -91,35 +91,48 @@
         <br>
         <table class="table table-hover">
             <thead>
-                <tr>
-                    <th>
-                        Nazwa
-                    </th>
-                    <th>
-                        Wartość
-                    </th>
-                </tr>
+            <tr>
+                <th>
+                    Nazwa
+                </th>
+                <th>
+                    Wartość
+                </th>
+            </tr>
             </thead>
             <tbody>
-                @foreach (var item in Model.CostPropertiesList)
+            @foreach (var item in Model.CostPropertiesList)
+            {
+                using (Html.BeginForm("EditCostPropList", "Admin"))
                 {
-                    using (Html.BeginForm("EditCostPropList", "Admin"))
-                    {
-                        <tr>
-                            @Html.Hidden("Id", item.Id)
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Name)
-                            </td>
-                            <td>
-                                @Html.TextBox("Value", item.Value, new { style = "max-width: 100px;" })
-                            </td>
-                            <td style="text-align: center">
-                                <button type="submit" class="btn btn-default btn-xs glyphicon glyphicon-pencil" onclick=" return confirm('Na pewno edytować?') "></button>
-                            </td>
-                        </tr>
-                    }
+                    <tr>
+                        @Html.Hidden("Id", item.Id)
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Name)
+                        </td>
+                        <td>
+                            @Html.TextBox("Value", item.Value, new {style = "max-width: 100px;"})
+                        </td>
+                        <td style="text-align: center">
+                            <button type="submit" class="btn btn-default btn-xs glyphicon glyphicon-pencil" onclick=" return confirm('Na pewno edytować?') "></button>
+                        </td>
+                    </tr>
                 }
+            }
             </tbody>
         </table>
+
+        <div class="row">
+            <div class="col-md-12" style="font-size: small">
+                <span class="btn btn-default btn-xs disabled" style="opacity: 1; width:80px">
+                    <span class="glyphicon glyphicon-search"></span>
+                    Edytuj
+                </span>
+                <span class="btn btn-danger btn-xs disabled" style="opacity: 1; width:80px">
+                    <span class="glyphicon glyphicon-trash"></span>
+                    Usuń
+                </span>
+            </div>
+        </div>
     </div>
 </div>
