--- a/nieruchomości/Views/Admin/Settings.cshtml
+++ b/nieruchomości/Views/Admin/Settings.cshtml
@@ -121,6 +121,7 @@
             }
             </tbody>
         </table>
+        <h4>Legenda</h4>
 
         <div class="row">
             <div class="col-md-12" style="font-size: small">
