--- a/nieruchomości/Views/Admin/Message.cshtml
+++ b/nieruchomości/Views/Admin/Message.cshtml
@@ -64,6 +64,12 @@
                             </div>
                         </div>
                     </div>
+                    <div class="row" style="text-align:right">
+                        <a class="btn btn-primary btn" href="mailto:@(Model.Email)">
+                            <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
+                            Odpowiedz
+                        </a>
+                    </div>
                 </div>
             </div>
 
