--- a/nieruchomości/Views/Admin/AdList.cshtml
+++ b/nieruchomości/Views/Admin/AdList.cshtml
@@ -50,172 +50,156 @@
             <div class="col-md-12">
                 @using (Html.BeginForm("AdList", "Admin", FormMethod.Get))
                 {
-                    <input type="hidden" name="search" value="true" />
-                    <div class="form-group-sm">
-                        <div class="row">
-                            <div class="col-md-2" style="font-size:small; font-weight:bold">
-                                Wyszukiwana fraza:
-                            </div>
-                            <div class="col-md-2" style="font-size:small; font-weight:bold">
-                                Pracownik:
-                            </div>
-                            <div class="col-md-2" style="font-size:small; font-weight:bold">
-                                Widoczność:
-                            </div>
-                            <div class="col-md-3" style="font-size:small; font-weight:bold">
-                                Data (od-do):
-                            </div>
-                            <div class="col-md-3" style="font-size:small; font-weight:bold">
-                                Rodzaj nieruchomości:
+                <input type="hidden" name="search" value="true" />
+                <div class="form-group-sm">
+                    <div class="row">
+                        <div class="col-md-2" style="font-size:small; font-weight:bold">
+                            Wyszukiwana fraza:
+                        </div>
+                        <div class="col-md-2" style="font-size:small; font-weight:bold">
+                            Pracownik:
+                        </div>
+                        <div class="col-md-2" style="font-size:small; font-weight:bold">
+                            Widoczność:
+                        </div>
+                        <div class="col-md-3" style="font-size:small; font-weight:bold">
+                            Data (od-do):
+                        </div>
+                        <div class="col-md-3" style="font-size:small; font-weight:bold">
+                            Rodzaj nieruchomości:
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-2">
+                            <div class="row">
+                                <div class="col-md-12">
+                                    @Html.TextBox("key", null, null, new { @class = "form-control", @placeholder = "Fraza", @style = "font-size:12px" })
+                                </div>
                             </div>
                         </div>
-                        <div class="row">
-                            <div class="col-md-2">
-                                <div class="row">
-                                    <div class="col-md-12">
-                                        @Html.TextBox("key", null, null, new { @class = "form-control", @placeholder = "Fraza", @style = "font-size:12px" })
-                                    </div>
+                        <div class="col-md-2">
+                            <div class="row">
+                                <div class="col-md-12">
+                                    @Html.TextBox("worker", null, null, new { @class = "form-control", @placeholder = "Imię i/lub nazwisko", @style = "font-size:12px" })
                                 </div>
                             </div>
-                            <div class="col-md-2">
-                                <div class="row">
-                                    <div class="col-md-12">
-                                        @Html.TextBox("worker", null, null, new { @class = "form-control", @placeholder = "Imię i/lub nazwisko", @style = "font-size:12px" })
-                                    </div>
+                        </div>
+                        <div class="col-md-2">
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <label><input type="radio" name="showHidden" value="false" checked />Aktywne</label>
                                 </div>
                             </div>
-                            <div class="col-md-2">
-                                <div class="row">
-                                    <div class="col-md-12">
-                                        <label><input type="radio" name="showHidden" value="false" checked />Aktywne</label>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-md-12">
-                                        <label><input type="radio" name="showHidden" value="true" />Ukryte</label>
-                                    </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <label><input type="radio" name="showHidden" value="true" />Ukryte</label>
                                 </div>
                             </div>
-                            <div class="col-md-3">
-                                <div class="row">
-                                    <div class="col-md-12">
-                                        <input type="date" name="dateFrom" class="form-control" id="dateFrom" pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}" oninvalid="setCustomValidity('Wprowadź datę w formacie YYYY-MM-DD')" oninput="setCustomValidity('')" />
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-md-12">
-                                        <input type="date" name="dateTo" class="form-control" id="dateTo" pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}" oninvalid="setCustomValidity('Wprowadź datę w formacie YYYY-MM-DD')" oninput="setCustomValidity('')" />
-                                    </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <input type="date" name="dateFrom" class="form-control" id="dateFrom" pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}" oninvalid="setCustomValidity('Wprowadź datę w formacie YYYY-MM-DD')" oninput="setCustomValidity('')" />
                                 </div>
                             </div>
-                            <div class="col-md-3 pull-right">
-                                <div class="row">
-                                    <div class="col-md-12">
-                                        <label><input type="checkbox" name="type" value="Flat" />Mieszkanie</label>
-                                    </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <input type="date" name="dateTo" class="form-control" id="dateTo" pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}" oninvalid="setCustomValidity('Wprowadź datę w formacie YYYY-MM-DD')" oninput="setCustomValidity('')" />
                                 </div>
-                                <div class="row">
-                                    <div class="col-md-12">
-                                        <label><input type="checkbox" name="type" value="House" />Dom</label>
-                                    </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3 pull-right">
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <label><input type="checkbox" name="type" value="Flat" />Mieszkanie</label>
                                 </div>
-                                <div class="row">
-                                    <div class="col-md-12">
-                                        <label><input type="checkbox" name="type" value="Land" />Działka</label>
-                                    </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <label><input type="checkbox" name="type" value="House" />Dom</label>
                                 </div>
-                                <div class="row">
-                                    <div class="col-md-12" style="padding-right:15px; text-align:left; margin-top:5px">
-                                        <button type="submit" class="btn btn-default btn-xs">Wyszukaj</button>
-                                    </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <label><input type="checkbox" name="type" value="Land" />Działka</label>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12" style="padding-right:15px; text-align:left; margin-top:5px">
+                                    <button type="submit" class="btn btn-default btn-xs">Wyszukaj</button>
                                 </div>
                             </div>
                         </div>
                     </div>
+                </div>
                 }
             </div>
         </div>
         <h4>Lista nieruchomości</h4>
         <div class="row">
             <div class="col-md-12" style="font-size: small">
-                @using (Html.BeginForm("ChangeAd", "Admin"))
-                {
-                    <table class="table" style="font-size: 11px">
-                        <thead>
+                <table class="table" style="font-size: 11px">
+                    <thead>
+                        <tr>
+                            <th>
+                                Data dodania
+                            </th>
+                            <th>
+                                Rodzaj
+                            </th>
+                            <th>
+                                Tytuł
+                            </th>
+                            <th>
+                                Miasto
+                            </th>
+                            <th>
+                                Osoba prowadząca
+                            </th>
+                            <th>
+
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var ad in Model)
+                        {
                             <tr>
-                                <th style="width: 12%">
-                                    <button type="submit" class="btn btn-primary btn-xs" style="width: 100%" id="submit">Wykonaj</button>
+                                <td>@ad.CreatedAt.ToShortDateString()</td>
+                                <td>@EnumNameHelper.GetAdType(ad.AdType)</td>
+                                <td>@ad.Title</td>
+                                <td>@ad.City</td>
+                                <td>@String.Format("{0}", (ad.Worker != null) ? ad.Worker.FullName : "---")</td>
+                                <td>
+                                    @*@Html.ActionLink("Edytuj", "EditAd", new { id = ad.Id, adtype = ad.AdType }, new { @class = "btn btn-default btn-xs"})*@
+                                    <a class="btn btn-success btn-xs" href="/Home/Show?key=@ad.Number">
+                                        <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                                    </a>
+                                    <a class="btn btn-default btn-xs" href="/Admin/EditAd?id=@ad.Id&adtype=@ad.AdType">
+                                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                                    </a>
                                     @if (HttpContext.Current.Request.Params.Get("showHidden") == "true")
                                     {
-                                        <label style="font-size: 11px; font-weight: bold; margin-bottom: 0"><input type="radio" checked name="action" value="true" /> Pokaż</label>
+                                        <a class="btn btn-primary btn-xs" href="/Admin/ChangeAd?delete=False&numbers=@ad.Number">
+                                            <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
+                                        </a>
                                     }
                                     else
                                     {
-                                        <label style="font-size: 11px; font-weight: bold; margin-bottom: 0"><input type="radio" checked name="action" value="true" /> Ukryj</label>
+                                        <a class="btn btn-warning btn-xs" href="/Admin/ChangeAd?delete=False&numbers=@ad.Number">
+                                            <span class="glyphicon glyphicon-eye-close" aria-hidden="true"></span>
+                                        </a>
                                     }
-                                    <label style="font-size: 11px; font-weight: bold; margin-bottom: 0"><input type="radio" name="action" value="false" id="delete"/> Usuń</label>
-                                </th>
-                                <th>
-                                    Data dodania
-                                </th>
-                                <th>
-                                    Rodzaj
-                                </th>
-                                <th>
-                                    Tytuł
-                                </th>
-                                <th>
-                                    Miasto
-                                </th>
-                                <th>
-                                    Osoba prowadząca
-                                </th>
-                                <th>
-                                    
-                                </th>
+                                    <a class="btn btn-danger btn-xs" href="/Admin/ChangeAd??delete=True&numbers=@ad.Number">
+                                        <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+                                    </a>
+                                </td>
                             </tr>
-                        </thead>
-                        <tbody>
-                            @foreach (var ad in Model)
-                            {
-                                <tr>
-                                    <td>
-                                        <input type="checkbox" name="numbers" value="@ad.Number" />
-                                    </td>
-                                    <td>@ad.CreatedAt.ToShortDateString()</td>
-                                    <td>@EnumNameHelper.GetAdType(ad.AdType)</td>
-                                    <td>@ad.Title</td>
-                                    <td>@ad.City</td>
-                                    <td>@String.Format("{0}", (ad.Worker != null) ? ad.Worker.FullName : "---")</td>
-                                    <td>
-                                        @*@Html.ActionLink("Edytuj", "EditAd", new { id = ad.Id, adtype = ad.AdType }, new { @class = "btn btn-default btn-xs"})*@
-                                        <a class="btn btn-success btn-xs" href="/Home/Show?key=@ad.Number">
-                                            <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
-                                        </a>
-                                        <a class="btn btn-default btn-xs" href="/Admin/EditAd?id=@ad.Id&adtype=@ad.AdType">
-                                            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                                        </a>
-                                    </td>
-                                </tr>
-                            }
-                        </tbody>
-                    </table>
-                }
+                        }
+                    </tbody>
+                </table>
                 <small>Strona @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) z @Model.PageCount</small>
                 <div style="text-align:center">@Html.PagedListPager(Model, page => Url.Action("AdList", new { page, changed = ViewBag.changed, hide = ViewBag.hide, hidden = ViewBag.hidden, search = ViewBag.Search, key = ViewBag.key, worker = ViewBag.worker, showHidden = ViewBag.showHidden, dateFrom = ViewBag.dateFrom, dateTo = ViewBag.dateTo, type = ViewBag.type }))</div>
-            </div>
-        </div>
-        <h4>Legenda</h4>
-        <div class="row">
-            <div class="col-md-12" style="font-size: small">
-                <span class="btn btn-success btn-xs disabled" style="opacity: 1; width:80px">
-                    <span class="glyphicon glyphicon-search"></span>
-                    Podgląd
-                </span>
-                <span class="btn btn-default btn-xs disabled" style="opacity: 1; width:80px">
-                    <span class="glyphicon glyphicon-search"></span>
-                    Edytuj
-                </span>
             </div>
         </div>
     </div>
@@ -246,13 +230,13 @@
     var today = new Date();
     var year = today.getFullYear();
     var month = today.getUTCMonth() + 1;
+    if ((month + "").length == 1) {
+        month = "0" + month;
+    }
     var day = today.getUTCDate();
+    if ((day + "").length == 1) {
+        day = "0" + day;
+    }
+
     $("#dateTo").val(year + "-" + month + "-" + day);
-
-    $("#submit").on("click",function() {
-        if ($("#delete")[0].checked) {
-            return confirm("Na pewno chcesz usunąć te ogłoszenia?");
-        };
-    });
 </script>
-
