--- a/nieruchomości/Views/Admin/Messages.cshtml
+++ b/nieruchomości/Views/Admin/Messages.cshtml
@@ -31,7 +31,6 @@
                     <tbody>
                         @foreach (var ad in Model.OrderByDescending(x => x.CreatedAt))
                         {
-
                             <tr>
                                 <td style="vertical-align:middle">@ad.CreatedAt.ToShortDateString()</td>
                                 <td style="vertical-align:middle">@ad.FullName</td>
@@ -53,6 +52,9 @@
                                     <a class="btn btn-danger btn-xs" href="/Admin/DeleteMessage?id=@ad.Id" onclick="return confirm('Na pewno usunąć tą wiadomość?');">
                                         <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
                                     </a>
+                                    <a class="btn btn-primary btn-xs" href="mailto:@(ad.Email)">
+                                        <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
+                                    </a>
                                 </td>
                             </tr>
                         }
@@ -60,19 +62,6 @@
                 </table>
                 <small>Strona @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) z @Model.PageCount</small>
                 <div style="text-align:center">@Html.PagedListPager(Model, page => Url.Action("Messages", new { page }))</div>
-            </div>
-        </div>
-        <h4>Legenda</h4>
-        <div class="row">
-            <div class="col-md-12" style="font-size: small">
-                <span class="btn btn-success btn-xs disabled" style="opacity: 1; width:80px">
-                    <span class="glyphicon glyphicon-search"></span>
-                    Podgląd
-                </span>
-                <span class="btn btn-danger btn-xs disabled" style="opacity: 1; width:80px">
-                    <span class="glyphicon glyphicon-trash"></span>
-                    Usuń
-                </span>
             </div>
         </div>
     </div>
