--- a/nieruchomości/Views/Admin/Workers.cshtml
+++ b/nieruchomości/Views/Admin/Workers.cshtml
@@ -62,7 +62,7 @@
                             <a class="btn btn-success btn-xs" href="/Admin/Worker?id=@item.Id">
                                 <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
                             </a>
-                            <a class="btn btn-default btn-xs" href="/Admin/EditWorker?id=@item.Id">
+                            <a class="btn btn-default btn-xs" href="/Admin/EditWorker/@item.Id">
                                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                             </a>
                             <a class="btn btn-danger btn-xs" href="/Admin/DeleteWorker?id=@item.Id" onclick="return confirm('Na pewno usunąć tego pracownika?');">
