--- a/nieruchomości/Views/Admin/AdList.cshtml
+++ b/nieruchomości/Views/Admin/AdList.cshtml
@@ -178,7 +178,7 @@
                                     <a class="btn btn-default btn-xs" href="/Admin/EditAd?id=@ad.Id&adtype=@ad.AdType">
                                         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                                     </a>
-                                    @if (HttpContext.Current.Request.Params.Get("showHidden") == "true")
+                                    @if (!ad.Visible)
                                     {
                                         <a class="btn btn-primary btn-xs" href="/Admin/ChangeAd?delete=False&numbers=@ad.Number">
                                             <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
