--- a/nieruchomości/Views/Admin/_AddHouse.cshtml
+++ b/nieruchomości/Views/Admin/_AddHouse.cshtml
@@ -3,7 +3,7 @@
 
 @if (!ViewData.ModelState.IsValid)
 {
-    <div class="row" style="padding: 10px">
+    <div class="row" style="padding: 10px" id="danger-panel">
         <div class="panel panel-danger">
             <button type="button" class="close" data-dismiss="alert" style="margin-right:5px; margin-top: 5px">×</button>
             <div class="panel-heading">
@@ -174,4 +174,10 @@
             alert(errors.join("\n"));
         }
     })
+</script>
+
+<script type="text/javascript">
+    $(".close").on("click", function () {
+        $("#danger-panel")[0].remove();
+    });
 </script>
