--- a/nieruchomości/Views/Admin/EditFlat.cshtml
+++ b/nieruchomości/Views/Admin/EditFlat.cshtml
@@ -5,7 +5,7 @@
     <h4>Edytuj mieszkanie</h4>
 @if (!ViewData.ModelState.IsValid)
 {
-    <div class="row" style="padding: 10px">
+    <div class="row" style="padding: 10px" id="danger-panel">
         <div class="panel panel-danger">
             <button type="button" class="close" data-dismiss="alert" style="margin-right:5px; margin-top: 5px">×</button>
             <div class="panel-heading">
@@ -224,3 +224,8 @@
     });
 </script>
 
+<script type="text/javascript">
+    $(".close").on("click", function () {
+        $("#danger-panel")[0].remove();
+    });
+</script>
