--- a/nieruchomości/Views/Admin/EditHouse.cshtml
+++ b/nieruchomości/Views/Admin/EditHouse.cshtml
@@ -5,7 +5,7 @@
     <h4>Edytuj dom</h4>
 @if (!ViewData.ModelState.IsValid)
 {
-    <div class="row" style="padding: 10px">
+    <div class="row" style="padding: 10px" id="danger-panel">
         <div class="panel panel-danger">
             <button type="button" class="close" data-dismiss="alert" style="margin-right:5px; margin-top: 5px">×</button>
             <div class="panel-heading">
@@ -214,5 +214,11 @@
             $(this)[0].value = "";
             alert(errors.join("\n"));
         }
+    });
+</script>
+
+<script type="text/javascript">
+    $(".close").on("click", function () {
+        $("#danger-panel")[0].remove();
     });
 </script>
