--- a/nieruchomości/Views/Admin/EditLand.cshtml
+++ b/nieruchomości/Views/Admin/EditLand.cshtml
@@ -5,9 +5,9 @@
     <h4>Edytuj działkę</h4>
 @if (!ViewData.ModelState.IsValid)
 {
-    <div class="row" style="padding: 10px">
+    <div class="row" style="padding: 10px" id="danger-panel">
         <div class="panel panel-danger">
-            <button type="button" class="close" data-dismiss="alert" style="margin-right:5px; margin-top: 5px">×</button>
+            <button type="button" class="close" style="margin-right:5px; margin-top: 5px" id="removeBtn">×</button>
             <div class="panel-heading">
                 Błąd
             </div>
@@ -182,5 +182,11 @@
             $(this)[0].value = "";
             alert(errors.join("\n"));
         }
+    });
+</script>
+
+<script type="text/javascript">
+    $(".close").on("click", function() {
+        $("#danger-panel")[0].remove();
     });
 </script>
