--- a/nieruchomości/Views/Admin/EditWorker.cshtml
+++ b/nieruchomości/Views/Admin/EditWorker.cshtml
@@ -11,7 +11,7 @@
         <h4>Edytuj pracownika</h4>
 @if (!ViewData.ModelState.IsValid)
 {
-    <div class="row" style="padding: 10px">
+    <div class="row" style="padding: 10px" id="danger-panel">
         <div class="panel panel-danger">
             <button type="button" class="close" data-dismiss="alert" style="margin-right:5px; margin-top: 5px">×</button>
             <div class="panel-heading">
@@ -153,4 +153,11 @@
             $(this)[0].value = "";
         }
     })
+</script>
+
+
+<script type="text/javascript">
+    $(".close").on("click", function () {
+        $("#danger-panel")[0].remove();
+    });
 </script>
