--- a/nieruchomości/Views/Admin/Workers.cshtml
+++ b/nieruchomości/Views/Admin/Workers.cshtml
@@ -39,7 +39,9 @@
                     <th>
                         Data dodania
                     </th>
-                    <th></th>
+                    <th style="width:130px">
+                        
+                    </th>
                 </tr>
             </thead>
             <tbody>
@@ -58,14 +60,14 @@
                         <td>
                             @item.CreatedAt.ToShortDateString()
                         </td>
-                        <td style="text-align: center">
-                            <a class="btn btn-success btn-xs" href="/Admin/Worker?id=@item.Id">
+                        <td style="text-align: right">
+                            <a class="btn btn-success btn-xs" href="/Admin/Worker?id=@item.Id" data-toggle="tooltip" data-placement="top" title="Podgląd">
                                 <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
                             </a>
-                            <a class="btn btn-default btn-xs" href="/Admin/EditWorker/@item.Id">
+                            <a class="btn btn-default btn-xs" href="/Admin/EditWorker/@item.Id" data-toggle="tooltip" data-placement="top" title="Edytuj">
                                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                             </a>
-                            <a class="btn btn-danger btn-xs" href="/Admin/DeleteWorker?id=@item.Id" onclick="return confirm('Na pewno usunąć tego pracownika?');">
+                            <a class="btn btn-danger btn-xs" href="/Admin/DeleteWorker?id=@item.Id" onclick="return confirm('Na pewno usunąć tego pracownika?');" data-toggle="tooltip" data-placement="top" title="Usuń">
                                 <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
                             </a>
                         </td>
@@ -79,3 +81,11 @@
     
 
 </div>
+
+<script language="javascript" src="/Scripts/jquery-1.10.2.js"></script>
+
+<script>
+    $(function () {
+        $('[data-toggle="tooltip"]').tooltip();
+    })
+</script>
