--- a/nieruchomości/Views/Admin/_addFlat.cshtml
+++ b/nieruchomości/Views/Admin/_addFlat.cshtml
@@ -3,16 +3,16 @@
 
 @if (!ViewData.ModelState.IsValid)
 {
-    <div class="row" style="padding: 10px">
-        <div class="panel panel-danger">
-            <button type="button" class="close" data-dismiss="alert" style="margin-right:5px; margin-top: 5px">×</button>
-            <div class="panel-heading">
-                Błąd
-            </div>
-            <div class="panel-body">
-                @Html.ValidationSummary()
-            </div> 
+    <div class="row" style="padding: 10px" id="danger-panel">
+        <div class=" panel panel-danger">
+        <button type="button" class="close" data-dismiss="alert" style="margin-right:5px; margin-top: 5px">×</button>
+        <div class="panel-heading">
+            Błąd
         </div>
+        <div class="panel-body">
+            @Html.ValidationSummary()
+        </div>
+    </div>
     </div>
 }
 @using (Html.BeginForm("AddFlat", "Admin", FormMethod.Post, new { enctype = "multipart/form-data" }))
@@ -182,5 +182,11 @@
             $(this).val("0");
             alert("Liczba pokoi nie może być ujemna!");
         }
+    });
+</script>
+
+<script type="text/javascript">
+    $(".close").on("click", function () {
+        $("#danger-panel")[0].remove();
     });
 </script>
