--- a/nieruchomości/Views/Home/_ContactForm.cshtml
+++ b/nieruchomości/Views/Home/_ContactForm.cshtml
@@ -2,7 +2,7 @@
 
 @if (!ViewData.ModelState.IsValid)
 {
-    <div class="row" style="padding: 10px">
+    <div class="row" style="padding: 10px" id="danger-panel">
         <div class="panel panel-danger">
             <button type="button" class="close" data-dismiss="alert" style="margin-right:5px; margin-top: 5px">×</button>
             <div class="panel-heading">
@@ -66,3 +66,8 @@
         </div>
     </div>
 }
+<script type="text/javascript">
+    $(".close").on("click", function() {
+        $("#danger-panel")[0].remove();
+    });
+</script>
