--- a/nieruchomości/Views/Admin/AddClat.cshtml
+++ b/nieruchomości/Views/Admin/AddClat.cshtml
@@ -95,3 +95,9 @@
     </div>
 </div>
             
+
+<script type="text/javascript">
+    $(".close").on("click", function () {
+        $("#danger-panel")[0].remove();
+    });
+</script>
